2023-02-20  Robby Stephenson  <robby@periapsis.org>

	* Updated AMS MR Lookup data source.
	* Updated Dark Horse data source.
	* Updated KinoPoisk data source.
	* Updated IBS data source.

2023-02-18  Robby Stephenson  <robby@periapsis.org>

	* Added new report with Image Grid.
	* Added report with one entry per page (Bug 452552).

2023-02-05  Robby Stephenson  <robby@periapsis.org>

	* Added data source for iTunes music.

2023-02-03  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug when UI languages are empty (Bug 464102).

2023-01-21  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.6.
	* Fixed edit dialog resizing (Bug 462237).

2023-01-16  Robby Stephenson  <robby@periapsis.org>

	* Added data source for FilmAffinity.

2023-01-12  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with timing of multisource config read (Bug 461861).

2023-01-10  Robby Stephenson  <robby@periapsis.org>

	* Added label catalog number to Discogs result options (Bug 452548).

2023-01-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed active filter when entry is selected (Bug 462337).

2023-01-02  Robby Stephenson  <robby@periapsis.org>

	* Added user option for https scheme in SRU data source (Bug 463438).

2022-11-21  Robby Stephenson  <robby@periapsis.org>

	* Use transparent background in initial entry view (Bug 461777).

2022-11-17  Robby Stephenson  <robby@periapsis.org>

	* Increased maximum icon size to 512.

2022-11-16  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.5.

2022-11-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed loading for large reports (Bug 461391).

2022-05-09  Robby Stephenson  <robby@periapsis.org>

	* Added capability to save empty collection as new template (Bug 450043).

2022-04-27  Robby Stephenson  <robby@periapsis.org>

	* Updated ESRB rating for TheGamesDB data source.
	* Fixed image path for exporting GCstar files (Bug 453075).

2022-04-08  Robby Stephenson  <robby@periapsis.org>
