@@ -1,3 +1,7 @@
+2023-03-09  Robby Stephenson  <robby@periapsis.org>
+
+	* Added support for importing EPub data on drag/drop (Bug 450192).
+
 2023-02-20  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated AMS MR Lookup data source.
